--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,14 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "backend/Dockerfile"
+dockerfilePath = "backend/Dockerfile.prod"
 
 [deploy]
-startCommand = "python3 -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+startCommand = "python3 -m uvicorn app.main:app --host 0.0.0.0 --port $PORT --workers 4"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
 [deploy.env]
-PYTHON_PATH = "/usr/lib/freecad/lib:/usr/lib/python3/dist-packages:/app"
+PYTHONPATH = "/usr/lib/freecad/lib:/usr/lib/python3/dist-packages:/app"
 LD_LIBRARY_PATH = "/usr/lib/freecad/lib"
+FLASK_ENV = "production"
+FLASK_DEBUG = "0"
