--- a/railway.toml
+++ b/railway.toml
@@ -7,9 +7,19 @@ buildContext = "backend"
 startCommand = "python3 -m uvicorn app.main:app --host 0.0.0.0 --port $PORT --workers 4"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
+healthcheckPath = "/health"
+healthcheckTimeout = 300
 
 [deploy.env]
 PYTHONPATH = "/usr/lib/freecad/lib:/usr/lib/python3/dist-packages:/app"
 LD_LIBRARY_PATH = "/usr/lib/freecad/lib"
 FLASK_ENV = "production"
 FLASK_DEBUG = "0"
+
+[[mounts]]
+source = "/data/uploads"
+destination = "/app/uploads"
+
+[[mounts]]
+source = "/data/converted"
+destination = "/app/converted"
