Consolidate Dockerfile for production and development environments

--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "Dockerfile.prod"
+dockerfilePath = "Dockerfile"
 buildContext = "backend"
 
 [deploy]
