--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,6 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "Dockerfile"
-buildContext = "backend"
+dockerfilePath = "backend/Dockerfile"
 
 [deploy]
 startCommand = "python3 -m uvicorn app.main:app --host 0.0.0.0 --port $PORT --workers 4"
