Integrate frontend build into backend and update deployment configurations

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,11 @@
+FROM node:18-alpine AS frontend-builder
+
+WORKDIR /frontend
+COPY ../frontend/package*.json ./
+RUN npm install
+COPY ../frontend .
+RUN npm run build
+
 FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
@@ -24,8 +32,11 @@ RUN pip3 install --no-cache-dir -r requirements.txt
 COPY app app/
 
 # Create and set permissions for required directories
-RUN mkdir -p uploads converted && \
-    chmod 777 uploads converted
+RUN mkdir -p uploads converted static && \
+    chmod 777 uploads converted static
+
+# Copy frontend build
+COPY --from=frontend-builder /frontend/dist /app/static
 
 # Set Python path to include FreeCAD libraries
 ENV PYTHONPATH=/usr/lib/freecad/lib:/usr/lib/python3/dist-packages:/app
