--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,10 +2,38 @@ server {
     listen 80;
     server_name localhost;
 
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+
+    # Root directory and index file
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Handle React Router
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
         try_files $uri $uri/ /index.html;
+        expires -1;
+    }
+
+    # Static files caching
+    location /static {
+        expires 1y;
+        add_header Cache-Control "public, no-transform";
+    }
+
+    # Assets caching
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 1y;
+        add_header Cache-Control "public, no-transform";
+    }
+
+    # Health check
+    location /health {
+        access_log off;
+        return 200 'OK';
+        add_header Content-Type text/plain;
     }
 
     # Proxy API requests to backend
@@ -16,5 +44,7 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 } 
