--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,33 +1,34 @@
 FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
+ENV FLASK_ENV=development
+ENV FLASK_DEBUG=1
 
 # Install Python, FreeCAD and other dependencies
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
     python3 \
     python3-pip \
     freecad \
     python3-pyside2.qtcore \
     python3-pyside2.qtgui \
     python3-numpy \
+    && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-# Copy only requirements first to leverage Docker cache
-COPY requirements.txt ./
+# Copy requirements first
+COPY requirements.txt .
 RUN pip3 install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY . .
+# Create necessary directories
+RUN mkdir -p uploads converted && \
+    chmod 777 uploads converted
 
 # Set Python path to include FreeCAD libraries
 ENV PYTHONPATH=/usr/lib/freecad/lib:/usr/lib/python3/dist-packages:/app
 ENV LD_LIBRARY_PATH=/usr/lib/freecad/lib:${LD_LIBRARY_PATH}
-
-# Development specific settings
-ENV FLASK_ENV=development
-ENV FLASK_DEBUG=1
 
 EXPOSE 8000
 
