--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "backend/Dockerfile"
+dockerfilePath = "Dockerfile"
 
 [deploy]
 startCommand = "python3 -m uvicorn app.main:app --host 0.0.0.0 --port $PORT --workers 4"
