--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -3,6 +3,10 @@ name: Deploy to Railway
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'backend/**'
+      - 'frontend/**'
+      - '.github/workflows/railway-deploy.yml'
 
 jobs:
   deploy:
@@ -15,16 +19,8 @@ jobs:
       - name: Install Railway CLI
         run: npm install -g @railway/cli
 
-      - name: Deploy Backend
-        working-directory: ./backend
+      - name: Deploy to Railway
+        working-directory: backend
         run: railway up
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-
-      - name: Deploy Frontend
-        working-directory: ./frontend
-        run: |
-          railway init
-          railway up
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }} 
