--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -6,7 +6,7 @@ dockerfilePath = "Dockerfile"
 startCommand = "python3 -m uvicorn app.main:app --host 0.0.0.0 --port $PORT --workers 4"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
-healthcheckPath = "/health"
+healthcheckPath = "/api/health"
 healthcheckTimeout = 300
 
 [deploy.env]
