--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -3,7 +3,8 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "python3 -m uvicorn app.main:app --host 0.0.0.0 --port $PORT --workers 4"
+numReplicas = 1
+startCommand = "uvicorn app.main:app --host 0.0.0.0 --port $PORT --workers 4"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 healthcheckPath = "/api/health"
