Update Dockerfile and main.py for improved static file serving and deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,10 @@
 FROM node:18-alpine AS frontend-builder
 
 WORKDIR /frontend
-# Copy frontend files
-COPY frontend/package*.json ./
+# Copy frontend files from parent directory
+COPY ../frontend/package*.json ./
 RUN npm install
-COPY frontend .
+COPY ../frontend .
 RUN npm run build
 
 FROM ubuntu:22.04
@@ -22,24 +22,25 @@ RUN apt-get update && \
     python3-pyside2.qtcore \
     python3-pyside2.qtgui \
     python3-numpy \
+    bash \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
 # Copy requirements first
-COPY backend/requirements.txt .
+COPY requirements.txt .
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 # Copy only the application code
-COPY backend/app app/
+COPY app app/
 
 # Create and set permissions for required directories
 RUN mkdir -p uploads converted static && \
     chmod 777 uploads converted static
 
 # Copy frontend build from the builder stage
-COPY --from=frontend-builder /frontend/dist /app/static
+COPY --from=frontend-builder /frontend/dist/* /app/static/
 
 # Set Python path to include FreeCAD libraries
 ENV PYTHONPATH=/usr/lib/freecad/lib:/usr/lib/python3/dist-packages:/app
@@ -48,4 +49,4 @@ ENV LD_LIBRARY_PATH=/usr/lib/freecad/lib:${LD_LIBRARY_PATH}
 EXPOSE 8000
 
 # Default command (can be overridden by Railway)
-CMD uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000} --workers ${WORKERS:-4} 
+CMD ["bash", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000} --workers ${WORKERS:-4}"] 
