--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/node": "^20.11.30",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-dropzone": "^5.1.0",
