Enhance frontend build process and Dockerfile optimization
- Add new npm script `build:skipcheck` for alternative build strategy
- Refactor Dockerfile to improve package installation and memory management
- Split package installations into smaller, more manageable steps
- Add aggressive cleanup after package installations
- Adjust frontend build process with multiple fallback build commands

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b --verbose && vite build",
     "build:force": "tsc -b --verbose --force && vite build",
+    "build:skipcheck": "vite build --skipTypeCheck",
     "lint": "eslint .",
     "preview": "vite preview"
   },
