--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b --verbose && vite build",
     "build:force": "tsc -b --verbose --force && vite build",
     "build:skipcheck": "vite build --skipTypeCheck",
+    "postbuild": "react-snap",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -16,11 +17,16 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "posthog-js": "^1.59.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "posthog-js": "^1.59.0"
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.4.0",
+    "react-schemaorg": "^2.0.0",
+    "react-snap": "^1.23.0",
+    "schema-dts": "^1.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -36,5 +42,13 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
+  },
+  "reactSnap": {
+    "include": ["/"],
+    "puppeteerArgs": ["--no-sandbox", "--disable-setuid-sandbox"],
+    "minifyHtml": {
+      "collapseWhitespace": false,
+      "removeComments": false
+    }
   }
 }
